--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,10 @@ default: &default
 development:
   <<: *default
   database: db/development.sqlite3
+  
+production:
+adapter: postgresql
+encoding: unicode
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
